--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>工具下载页</title>
+  <title>工具下载页1.0</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -107,7 +107,7 @@
 
 <body>
   <div class="app-card">
-    <img class="app-image" src="tp.png" alt="App Image">
+    <img class="app-image" src="https://s3.bmp.ovh/imgs/2024/05/11/0c200f5c6355fb80.png" alt="App Image">
     <div class="app-name">LinkMate</div>
     <div class="app-description">
 ——————软件简介——————<br>
@@ -122,13 +122,13 @@ LinkMate是一款专为王者荣耀玩家设计的链接转换工具。它能够
     </div>
 
     <div class="screenshots">
-      <img class="screenshot" src="1.jpg" alt="App 1">
-      <img class="screenshot" src="2.jpg" alt="App 2">
-      <img class="screenshot" src="3.jpg" alt="App 3">
+      <img class="screenshot" src="https://s3.bmp.ovh/imgs/2024/05/11/165a171919af2b9d.jpg" alt="App 1">
+      <img class="screenshot" src="https://s3.bmp.ovh/imgs/2024/05/11/b01e0c9db4c80ecc.jpg" alt="App 2">
+      <img class="screenshot" src="https://s3.bmp.ovh/imgs/2024/05/11/510b1f22503ec9b8.jpg" alt="App 3">
     </div>
 
     
-    <a href="http://qaq.ddynb.top/down.php/ddb179248d1773348e3cf7fd5de13a8a.apk" class="download-button">立即下载</a>
+    <a href="https://chiyanwzzdy.github.io/Download/base.apk" class="download-button">立即下载</a>
     <a href="mqqopensdkapi://bizAgent/qm/qr?url=https://qm.qq.com/q/ZGWYcK9nAm" class="download-button">加入群聊</a>
     <a href="https://alimov2.a.kwimgs.com/bs2/photo-video-mz/5214887025035017176_f9c11793a0afd144_22727096114404200_sl200hd15.mp4?tag=1-1715076234-unknown-0-wloctifqvl-d0d67080fba14ff4&clientCacheKey=3xs6ntj2qhxp9yc_b4271bde&di=6f370a3f&bp=10000&tt=sl200hd15&ss=vp" class="download-button">使用教程</a>
 
